--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,18 @@
 *.user
 *.userosscache
 *.sln.docstates
-*.designer.cs
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
+
+# ignore Xamarin.Android Resource.Designer.cs files
+**/*.Droid/**/[Rr]esource.[Dd]esigner.cs
+**/*.Android/**/[Rr]esource.[Dd]esigner.cs
+**/Android/**/[Rr]esource.[Dd]esigner.cs
+**/Droid/**/[Rr]esource.[Dd]esigner.cs
+
+# Xamarin Components
+Components/
 
 # Build results
 [Dd]ebug/
