--- a/XFSamples.iOS/Info.plist
+++ b/XFSamples.iOS/Info.plist
@@ -48,5 +48,11 @@
     </array>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
+    <key>UIAppFonts</key>
+    <array>
+      <string>FontAwesome5Brands.otf</string>
+      <string>FontAwesome5Regular.otf</string>
+      <string>FontAwesome5Solid.otf</string>
+    </array>
   </dict>
 </plist>
